docs: update docs for better redability, and document new list invites route
